Fix uneven navbar width

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .nav {
   background-color: white;
-  padding: 1rem;
+  padding: 1rem 0;
 
   &__container {
     display: flex;
@@ -9,6 +9,7 @@
     flex-wrap: wrap;
     gap: 2rem 1rem;
     margin: 0 auto;
+    padding: 0 1rem;
     min-height: 90px;
     max-width: 1400px;
     width: 100%;
